# chessboard-augmented-reality

./: Makefile  README.md  README.md~
camera_calibration/: CMakeLists.txt  VID5.xml  in_VID5.xml  main.cpp  out_camera_data.xml
chessboard pattern/: CMakeLists.txt  cam.txt  input.txt  mycam.txt  opencv_gl.cpp
statement/: assignment statement  hints  skelaton
video_calibration/: VID5.xml  in_VID5.xml  main.cpp  out_camera_data.xml
